--- a/Home.html
+++ b/Home.html
@@ -123,7 +123,7 @@
     <footer class="u-align-center u-clearfix u-footer u-gradient u-footer" id="sec-a5d3"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">
           <span class="u-text-body-alt-color">Made with ❤️ from Hungary by</span>
-          <a href="https://www.cubebanyasz.me" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-light-2 u-btn-1" target="_blank">Cubebanyasz </a>
+          <a href="https://cubebanyasz.me" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-light-2 u-btn-1" target="_blank">Cubebanyasz </a>
         </p>
       </div></footer>
     </section><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: linear-gradient(#adcce9, #db545a); right: 20px; bottom: 20px; padding: 14px; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4); --radius:15px;" class="u-back-to-top u-gradient u-hidden-sm u-icon u-icon-rounded u-opacity u-opacity-75 u-radius u-text-palette-1-dark-3" data-href="#">
