--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Akshnav launcher">
     <meta property="og:description" content="A free and not open source program for Minecraft: Bedrock Edition">
     <meta property="og:image" content="/images/133837538_49d0fbcd-b7de-448c-bb6f-cfb2d358e886.jpg">
-    <meta property="og:url" content="akshnav.cubebanyasz.me">
+    <meta property="og:url" content="akshnav.netlify.app">
     
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Audiowide:400">
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="/" data-include-products="true" class="u-body u-xl-mode" data-lang="en" style="background-position: 50% 50%; background-image: url(&quot;/images/133837538_49d0fbcd-b7de-448c-bb6f-cfb2d358e886.jpg?rand=1e4c&quot;);"><header class="u-black u-clearfix u-header u-sticky u-sticky-7d30 u-header" id="sec-f02a"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://akshnav.cubebanyasz.me" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256" title="Home" rel="nofollow">
+        <a href="https://akshnav.netlify.app" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256" title="Home" rel="nofollow">
           <img src="/images/app-1.png" class="u-logo-image u-logo-image-1">
         </a>
         <h3 class="u-custom-font u-headline u-text u-text-default u-text-palette-1-dark-2 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">
@@ -104,7 +104,7 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1"></div>
         </div>
-        <div class="custom-expanded u-align-center u-container-style u-gradient u-group u-hover-feature u-radius u-shape-round u-group-1" data-href="https://akshnav.cubebanyasz.me/akshnav/akshnav.exe" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0" rel="nofollow">
+        <div class="custom-expanded u-align-center u-container-style u-gradient u-group u-hover-feature u-radius u-shape-round u-group-1" data-href="https://akshnav.netlify.app/akshnav/akshnav.exe" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0" rel="nofollow">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
             <h2 class="u-custom-font u-text u-text-default u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0">Download</h2>
           </div>
