fixed download now button

--- a/Home.html
+++ b/Home.html
@@ -76,7 +76,7 @@
         <p class="u-align-center u-custom-font u-text u-text-palette-1-light-1 u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">A tool for Minecraft: Bedrock Edition </p>
         <div class="custom-expanded u-align-center u-container-style u-effect-fade u-group u-hover-box u-hover-feature u-palette-1-light-2 u-radius u-shape-round u-group-1" data-href="#" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="1">
           <div class="u-back-slide u-container-layout u-valign-middle u-container-layout-1">
-            <h2 class="u-custom-font u-text u-text-default u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Download now</h2>
+            <h2 class="u-custom-font u-text u-text-default u-text-3" data-animation-name="customAnimationIn" data-href="https://akshnav.netlify.app/Home/#sec-b356" data-animation-duration="1000" data-animation-delay="0">Download now</h2>
           </div>
           <div class="u-black u-container-layout u-opacity u-opacity-25 u-over-slide u-container-layout-2"></div>
         </div>
